After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722611 - Cannot build gnome-packagekit with --disable-systemd
Cannot build gnome-packagekit with --disable-systemd
Status: RESOLVED FIXED
Product: gnome-packagekit
Classification: Core
Component: general
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: gnome-packagekit-maint
gnome-packagekit-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-20 16:11 UTC by Ting-Wei Lan
Modified: 2014-01-20 16:23 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ting-Wei Lan 2014-01-20 16:11:47 UTC
It fails with the following error in src:

gpk-update-viewer.c:3462:6: error: use of undeclared identifier 'console'
        if (console != NULL)
            ^
gpk-update-viewer.c:3463:19: error: use of undeclared identifier 'console'
                g_object_unref (console);
                                ^
Comment 1 Richard Hughes 2014-01-20 16:23:01 UTC
commit f7ba8ac01db52c9dc68c6b1eef57182a4696e24f
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Jan 20 16:22:49 2014 +0000

    Fix compile with --disable-systemd
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=722611