Fix compile with --disable-systemd

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=722611